# stereotype_detection_through_steering_vectors

./: pyproject.toml
data/: download_detests_data.ipynb
notebooks/: data_analysis.ipynb  download_detests_data.ipynb
